--- a/app/views/users/password_change.html.slim
+++ b/app/views/users/password_change.html.slim
@@ -5,17 +5,17 @@
       .card.mb-4
         .card-body 
           h3 style="color:#77acb3" Edit Password
-          = form_with model: @form, method: :post do |f|
+          = form_with model: @form, url: "/actual/change/#{@user.id}", method: :post do |f|
             .form-group.mb-4
               = f.label :password, class: 'mb-2'
               = f.password_field :password, class: 'form-control'
               - if @form.errors[:password].any?
-                .error-msg This #{ @form.errors[:password][0] }
+                .error-msg Password #{ @form.errors[:password][0] }
             .form-group.mb-4
               = f.label :password_confirmation, class: 'mb-2'
               = f.password_field :password_confirmation, class: 'form-control'
               - if @form.errors[:password_confirmation].any?
-                .error-msg This #{ @form.errors[:password_confirmation][0] }
+                .error-msg Password confirmation #{ @form.errors[:password_confirmation][0] }
             .d-flex.justify-content-end.mb-2
               a.btn.btn-secondary.text-white.me-2 href="#" Cancel
               button.btn.btn-primary Update User
