--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,8 +12,18 @@
     <%= javascript_pack_tag 'app', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
+  <body>  
+    <%= render 'share/nav' %>
     <%= yield %>
+
+    <% if flash.any? %>
+    <script type="text/javascript">
+      <% flash.each do |key, value| %>
+              <% type = key.to_s.gsub('alert', 'error').gsub('notice', 'success') %>
+              toastr.<%= type %>('<%= value %>')
+            <% end %>
+      </script>
+    <% end %>
 
     <script type="text/javascript">
     $(document).ready(function(){
