--- a/app/views/login/login.html.slim
+++ b/app/views/login/login.html.slim
@@ -1,6 +1,6 @@
 == render "share/nav"
 .container.vh-100
-    div class="col-12 col-md-3 mx-auto" style="position:absolute; top: 50%; right: 50%; transform : translate(50%,-50%)" 
+    .col-12.col-md-3.mx-auto style="position:absolute; top: 50%; right: 50%; transform : translate(50%,-50%)" 
       h2.text-center Log In
       .card
         .card-body
