--- a/app/views/users/_form.html.slim
+++ b/app/views/users/_form.html.slim
@@ -46,5 +46,5 @@
     - if @form.errors[:role].any?
       .error-msg Role #{ @form.errors[:role][0] }
   .d-flex.justify-content-end.mb-2
-    a.btn.btn-secondary.text-white.me-2 href="#" Cancel
-    button.btn.btn-primary Create User
+    a.btn.btn-secondary.text-white.me-2 href="/" Cancel
+    button.btn.btn-primary Save
