--- a/app/views/users/password_change.html.slim
+++ b/app/views/users/password_change.html.slim
@@ -17,5 +17,5 @@
               - if @form.errors[:password_confirmation].any?
                 .error-msg Password confirmation #{ @form.errors[:password_confirmation][0] }
             .d-flex.justify-content-end.mb-2
-              a.btn.btn-secondary.text-white.me-2 href="#" Cancel
+              a.btn.btn-secondary.text-white.me-2 href="/profile/#{ @user.id }" Cancel
               button.btn.btn-primary Update User
