add user_id in post table

--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -12,8 +12,9 @@
           - else 
             <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" width="20" height="20"><path fill="white" d="M144 144v48H304V144c0-44.2-35.8-80-80-80s-80 35.8-80 80zM80 192V144C80 64.5 144.5 0 224 0s144 64.5 144 144v48h16c35.3 0 64 28.7 64 64V448c0 35.3-28.7 64-64 64H64c-35.3 0-64-28.7-64-64V256c0-35.3 28.7-64 64-64H80z"/></svg>
         small.m-0 Last updated on: 
-        span = post.updated_at
+        span = post.updated_at.strftime("%Y/%m/%d %I:%M:%S %p")
       p.px-4.pt-3 = post.description
       .d-flex.justify-content-end.align-items-center.px-4.pb-3
         a.btn.btn-color.text-white.me-2 href="posts/#{post.id}" Show More
-        => link_to "Delete", "/posts/#{ post.id }", method: :delete, class: "btn btn-danger text-white"
+        - if post.user_id == current_user.id
+          => link_to "Delete", "/posts/#{ post.id }", method: :delete, class: "btn btn-danger text-white"
