--- a/app/views/posts/_form.html.slim
+++ b/app/views/posts/_form.html.slim
@@ -1,4 +1,5 @@
 = form_with model: @form do |f|
+  = f.hidden_field :user_id, value: current_user.id
   .form-group.mb-4 
     = f.label :post_title, class: 'mb-2'
     = f.text_field :title, class: 'form-control' 
