--- a/app/views/posts/show.html.slim
+++ b/app/views/posts/show.html.slim
@@ -7,7 +7,8 @@
           h3.txt-color = @post.title
           p = @post.description
           .d-flex.justify-content-end
-            a.btn.btn-primary.text-white.me-2 href="/users" Back
-            => link_to "Edit",edit_post_path(@post), class: "btn btn-color text-white"
+            a.btn.btn-primary.text-white.me-2 href="/posts" Back
+            - if @post.user_id == current_user.id
+              => link_to "Edit",edit_post_path(@post), class: "btn btn-color text-white"
 
      
