--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -28,7 +28,7 @@ div.container style="margin-top:80px"
                   td = user.role
                   - if user_signed_in?
                     td.d-flex.justify-content-end
-                      a.btn.btn-sm.btn-secondary.me-2.text-white href="/profile/#{ user.id }/edit" Show
+                      a.btn.btn-sm.btn-secondary.me-2.text-white href="/profile/#{ user.id }" Show
                       -if user.id == current_user.id
                         a.btn.btn-sm.btn-info.me-2.text-white href="/users/#{ user.id }/edit" Edit
                         => link_to "Delete", "/users/#{ user.id }", method: :delete, class: "btn btn-sm btn-danger text-white"
