--- a/app/views/posts/index.html.slim
+++ b/app/views/posts/index.html.slim
@@ -30,5 +30,6 @@
       p.px-4.pt-3 = post.description
       .d-flex.justify-content-end.align-items-center.px-4.pb-3
         a.btn.btn-color.text-white.me-2 href="posts/#{post.id}" Show More
+        a.btn.btn-primary.text-white.me-2 href="/posts/copy/#{post.id}" Copy
         - if current_user && post.user_id == current_user.id
           => link_to "Delete", "/posts/#{ post.id }", method: :delete, data: { confirm: "Are you sure?" }, class: "btn btn-danger text-white"
